<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_of_terpila"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/no_photo_available_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelTextTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/level_of_terpila"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_of_terpila"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/levelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/levelTextTv"
        app:layout_constraintStart_toEndOf="@id/image_of_terpila"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/progressTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/progressPb"
        app:layout_constraintTop_toBottomOf="@id/levelTv" />

    <ProgressBar
        android:id="@+id/progressPb"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_of_terpila"
        app:layout_constraintTop_toBottomOf="@id/progressTv" />

    <TextView
        android:id="@+id/coins_Tv"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:text="32"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/ic_baseline_remove_circle_24"
        app:layout_constraintStart_toStartOf="@id/image_of_terpila"
        app:layout_constraintTop_toBottomOf="@id/image_of_terpila" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/terpetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terpet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settingsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terpetBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsBtn" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>